--- a/src/styles.css
+++ b/src/styles.css
@@ -6,13 +6,20 @@ body {
 }
 
 #home {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
   background-image: url("./images/burger-zulu-small.jpg");
   background-position: center;
   background-size: contain;
-  justify-content: center;
-  align-items: center;
   height: 50vh;
 }
+
+#home > .welcome {
+  padding-top: .5rem;
+}
+
 #home > h1,
 #home > p {
   color: whitesmoke;
@@ -20,11 +27,13 @@ body {
 }
 
 #home > h1 {
-  padding: 2rem 1rem 0 0;
+  margin: .3rem .3rem;
+  /* padding: 2rem 1rem 0 0; */
 }
 
 #home > p {
-  padding: 0.5rem 0 1rem 1rem;
+  margin: 0;
+  padding: 0.3rem .3rem;
 }
 
 .menu-container {
