update styling for contact and footer

--- a/src/styles.css
+++ b/src/styles.css
@@ -102,14 +102,21 @@ section {
 } */
 
 #contact {
-  padding-bottom: 4rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 6rem;
+}
+
+#contact > p {
+  margin: .3em;
 }
 
 footer {
   background-color: #333;
   color: white;
   text-align: center;
-  padding: 1rem;
+  padding: .5rem;
   position: fixed;
   width: 100%;
   bottom: 0;
